# 8004-solana

./: .gitignore  AGENTS.md  ATOM-CHANGELOG.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  INDEXER_REMAINING_PLAN.md  LICENSE  PLAN-8004.md  README.md  SECURITY-AUDIT-REPORT.md  agent_registry_8004.ts  atom_engine.json  atom_engine.ts  package-lock.json  package.json
.cargo/: audit.toml  config.toml.example
audit_8004/: audit.md
docs/: CONFORMITE_ERC8004SPEC_GITHUB.md  METAPLEX_INTEGRATION.md  SEAL.md  index.html  v0.1.0.html  v0.2.0.html
idl/: agent_registry_8004.json  atom_engine.json
programs/agent-registry-8004/: Cargo.toml
programs/agent-registry-8004/src/: constants.rs  core_asset.rs  error.rs  lib.rs
programs/agent-registry-8004/src/_archive/validation/: contexts.rs  events.rs  state.rs
programs/agent-registry-8004/src/identity/: contexts.rs  events.rs  instructions.rs  state.rs
programs/agent-registry-8004/src/reputation/: chain.rs  compute.rs  contexts.rs  events.rs  formal.rs  instructions.rs  mod.rs  params.rs  seal.rs  state.rs  stats.rs
programs/agent-registry-8004/src/validation/: contexts.rs  events.rs  instructions.rs  mod.rs  state.rs
programs/atom-engine/: Cargo.toml  README.md
programs/atom-engine/src/: compute.rs  contexts.rs  error.rs  events.rs  lib.rs  params.rs  state.rs
scripts/: deploy.ts  init-atom.ts  init-devnet.ts  initialize-devnet.ts  measure-costs-simple.ts  measure-costs.ts  measure-devnet-costs.sh  measure-devnet-costs.ts  recover-test-wallets.ts  setup-atom-engine-dep.sh  start-localnet.sh  use-local-atom.sh
sdk/: metadata-helpers.ts
tests/: agent-registry-full.ts  anti-gaming-tests.ts  atom-attack-vectors.ts  atom-engine-tests.ts  (+40 more)
(+30 files in other folders)
