[package]
name = "agent-registry-8004"
version = "0.5.1"
description = "8004 AI Agent Identity & Reputation Registry (Consolidated)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry_8004"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = "0.11.1"
atom-engine = { path = "../atom-engine", features = ["cpi"] }
