[package]
name = "atom-engine"
version = "0.2.2"
description = "ATOM Engine - AI Agent Trust & Reputation Metrics for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atom_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
mpl-core = "0.11.1"

[dev-dependencies]
litesvm = "0.9"
solana-sdk = "2.0"
solana-program-test = "2.0"

